data base and intents

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".menos" />
         <activity android:name=".menoscategory" />
         <activity android:name=".goal" />
-        <activity android:name=".addgoal"></activity>
+        <activity android:name=".addgoal" />
+        <activity android:name=".teste"></activity>
     </application>
 
 </manifest>
